--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,8 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <div id="status"></div>
+    <div class="plus" id="status"></div>
+    <script src="inline.js"></script>
     <img id="image-result" hidden>
   </body>
 </html>
