--- a/popup.html
+++ b/popup.html
@@ -34,5 +34,6 @@
     <div class="plus" id="status"></div>
     <script src="inline.js"></script>
     <img id="image-result" hidden>
+   <button id='beginConvert'>Convert</button>
   </body>
 </html>
