--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+    <link rel="shortcut icon" type="image/png" href="icon.png" /> </head>
 
 <body id="page-top">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -38,7 +38,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li> <a class="page-scroll" href="#Top">Main</a> </li>
                     <li> <a class="page-scroll" href="#about">About</a> </li>
-<!--                    <li> <a class="page-scroll" href="#download">Download</a> </li>-->
+                    <!--                    <li> <a class="page-scroll" href="#download">Download</a> </li>-->
                     <li> <a class="page-scroll" href="#contact">Contact</a> </li>
                 </ul>
             </div>
