change button id

--- a/popup.html
+++ b/popup.html
@@ -63,7 +63,7 @@
     <h5>Reason</h5>
     <div class="form-group">
         <input type="text" class="form-control" id="usr"> </div>
-    <button id='beginConvert'>Submit</button>
+    <button id='saveStuff'>Submit</button>
     <script src="popup.js"></script>
     
 </body>
