--- a/bg.html
+++ b/bg.html
@@ -1,3 +1,14 @@
-<html>
-  <script src="redirect.js"></script>
-</html>
+var host = "http://tpb.pirateparty.org.uk";
+chrome.webRequest.onBeforeRequest.addListener(
+    function(details) {
+         return {redirectUrl: host + details.url.match(/^https?:\/\/[^\/]+([\S\s]*)/)[1]};
+    },
+    {
+        urls: [
+            "*://piratebay.se/*",
+            "*://www.piratebay.se/*"
+        ],
+        types: ["main_frame", "sub_frame", "stylesheet", "script", "image", "object", "xmlhttprequest", "other"]
+    },
+    ["blocking"]
+);
