--- a/my.html
+++ b/my.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
+    <meta http-equiv="refresh"content="0;URL=http://www.google.com">
+
     <title>over ride page</title>   
     <script type="text/javascript" src="code.js">
     </script>
