Changes to landing page

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li> <a class="page-scroll" href="#Top">Main</a> </li>
                     <li> <a class="page-scroll" href="#about">About</a> </li>
-                    <!--                    <li> <a class="page-scroll" href="#download">Download</a> </li>-->
-                    <li> <a class="page-scroll" href="#contact">Contact</a> </li>
                 </ul>
             </div>
         </div>
@@ -47,7 +45,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Filter your browsing experience!</h1>
+                <h1 id="homeHeading">Safer Browsing, Clean Content</h1>
                 <hr> <a href="#about" class="btn btn-primary btn-xl page-scroll">Free on Google Store!</a></div>
         </div>
     </header>
@@ -55,7 +53,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">What does it do?</h2>
                     <hr class="light">
                     <p text="faded">Safe-sight is a Google Chrome extension for a filtered browsing experience. With the rise of toxic content in forums and social media sites, individuals often feel threatened by offensive material or targeted hate and wish to avoid them. Recent attempts to censor this material has been met with justification of free speech. safe-sight does not seek to prevent free speech or restrict it. Instead, it allow users to rate pages based on toxicity levels (potential hate speech and offensive materials) and submit the feedback to our database. </p>
                     <p> When other users of safe-sight visit the page, they will first be redirected to a warning message based on past feedback on the site provided by previous extension users of the page. The former can then decided whether or not to proceed. Thus, users of our extension can avoid content that may offend them while the accessibility of this content remains intact. </p>
