First draft of site

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Safer Browsing, Clean Content</h1>
+                <h1 id="homeHeading">Safer Browsing, Cleaner Content</h1>
                 <hr> <a href="#about" class="btn btn-primary btn-xl page-scroll">Free on Google Store!</a></div>
         </div>
     </header>
